Fix alignment of nav items in the mobile burger menu - needed a left and right margin.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,7 +53,8 @@ p
 }
 
 .nav-item {
-    margin-right: 20px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 /*---------- Spotify Callout ----------*/
